Fully Implementation of the Clean Arch

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">com.kforce.urbanic</string>
+    <string name="loading_configs">Loading Configurations</string>
 </resources>
