--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">com.kforce.urbanic</string>
     <string name="loading_configs">Loading Configurations</string>
+    <string name="search_placeholder">Search Something to start</string>
+    <string name="search_cancel">Cancel</string>
 </resources>
