--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">com.kforce.urbanic</string>
     <string name="loading_configs">Loading...</string>
     <string name="search_placeholder">Search here</string>
+    <string name="title_error">Oh no!!!</string>
     <string name="search_error">No results found</string>
     <string name="search_cancel">Cancel</string>
 </resources>
